Modify custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://garciasdos.github.io/portfolio",
+  "homepage": "https://www.gdos.dev",
   "name": "diegogarciagarcia.dev",
   "version": "0.1.0",
   "private": true,
